[package]
name = "egui_gauge"
version = "0.1.3"
edition = "2021"
description = "egui gauge UI element"
license = "MIT"
repository = "https://github.com/bobbobbio/egui_gauge"
homepage = "https://github.com/bobbobbio/egui_gauge"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.24.1"
emath = "0.24.1"
epaint = "0.24.1"

[dev-dependencies]
eframe = "0.24.1"
